<resources>
    <string name="app_name">Loot Generator for D&amp;D 5e</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="treasure_send">Generate Treasure</string>
    <string name="challenge">Challenge Level:</string>
    <string name="challenge_spinner">Challenge Level</string>
    <string-array name="challenge_array">
        <item>0-4</item>
        <item>5-10</item>
        <item>11-16</item>
        <item>17+</item>
    </string-array>
    <string name="spell_send">Generate Spell</string>
    <string name="level">Spell Level:</string>
    <string name="level_spinner">Spell Level</string>
    <string-array name="level_array">
        <item>Random</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="spell_class">Spell Class: </string>
    <string name="class_spinner">Spell Class</string>
    <string-array name="class_array">
        <item>Random</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string name="item_send">Generate Item</string>
    <string name="individual">Individual</string>
    <string name="hoard">Hoard</string>
    <string name="iterations_spinner">Iterations Spinner</string>
    <string name="iterations">Number of Times to Run:</string>
    <string name="treasure">Treasure</string>
    <string name="spells">Spells</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="treasure_banner_ad">ca-app-pub-9108289994838354/7302796227</string>
    <string name="spell_banner_ad">ca-app-pub-9108289994838354/8779529427</string>
    <string name="item_banner_ad">ca-app-pub-9108289994838354/2732995820</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="txtCredits"><a href=" PayPal.Me/PDante">here</a></string>
    <string name="premium_soon">An ad-free version will be available soon. Sorry for the
        delay.</string>
    <string name="dialog_message">For an ad-free version of this app go to https://play.google.com/store/apps/details?id=com.dante.paul.lootgeneratorfordnd5epremium</string>
    <string name="premium_url"><a
        href="https://play.google.com/store/apps/details?id=com.dante.paul.lootgeneratorfordnd5epremium">Google Store</a></string>
    <string name="dialog_title">Ad-Free Loot Generator</string>
    <string name="dialog_action_dismiss">Dismiss</string>

</resources>
