<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_encounter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@+id/radio_individual"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_individual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual" />

            <RadioButton
                android:id="@+id/radio_horde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horde" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"
            android:text="@string/challenge"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/challenge_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_edittext"
            android:fadingEdge="horizontal"
            android:outlineProvider="bounds"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:textAlignment="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"
            android:text="@string/iterations"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/iteration_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_edittext"
            android:fadingEdge="horizontal"
            android:outlineProvider="bounds"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:textAlignment="center" />

        <Button
            android:id="@string/treasure_send"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:clickable="true"
            android:contextClickable="false"
            android:onClick="generateTreasure"
            android:text="@string/treasure_send" />


    </LinearLayout>
</LinearLayout>