<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dante.paul.dd5erandomlootgenerator.LootGenerator">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_loot_generator" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="145dp"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_encounter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_individual">

                <RadioButton
                    android:id="@+id/radio_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/individual" />

                <RadioButton
                    android:id="@+id/radio_horde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/horde" />
            </RadioGroup>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingRight="5dp"
                        android:text="@string/challenge"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/challenge_spinner"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_edittext"
                        android:fadingEdge="horizontal"
                        android:outlineProvider="bounds"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingRight="5dp"
                        android:text="@string/iterations"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/iteration_spinner"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/rounded_edittext"
                        android:fadingEdge="horizontal"
                        android:outlineProvider="bounds"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@string/treasure_send"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:onClick="generateTreasure"
                android:text="@string/treasure_send"
                android:clickable="true"
                android:contextClickable="false" />

            <Button
                android:id="@string/item_send"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="generateItem"
                android:text="@string/item_send" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingRight="5dp"
                android:text="@string/spell_class"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/class_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_edittext"
                android:fadingEdge="horizontal"
                android:outlineProvider="bounds"
                android:paddingBottom="0dp"
                android:paddingTop="0dp"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"
            android:text="@string/level"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/level_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_edittext"
            android:fadingEdge="horizontal"
            android:outlineProvider="bounds"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:textAlignment="center" />

        <Button
            android:id="@string/treasure_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="generateSpell"
            android:text="@string/spell_send"
            android:contextClickable="false" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
